@@ -44,7 +44,6 @@ rem #   Tweak these in accordance to your needs
 rem # Xmx and Xms set the heap size for the Java Virtual Machine
 rem # You may also want to add the following:
 rem # -XX:+UseParallelGC
-rem # -XX:+AggressiveOpts
 rem ##################################################
 if not "!%INDEX_OPTIONS%!"=="!!" goto indexoptionsfound
 set INDEX_OPTIONS=-Xms512m -Xmx512m -DentityExpansionLimit=0
